--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -35,6 +39,15 @@
             android:name=".activities.LeaderboardSelectionActivity"
             android:label="选择榜单"
             android:parentActivityName=".activities.MainActivity" />
+
+        <activity
+            android:name=".activities.MultiplayerLobbyActivity"
+            android:label="联机大厅"
+            android:parentActivityName=".activities.MainActivity" />
+
+        <activity
+            android:name=".activities.MultiplayerGameActivity"
+            android:label="联机对战" />
     </application>
 
 </manifest>
